# frm

./: README.md  frmbase-requirements.txt  frmgis-requirements.txt  frmplot-requirements.txt  readme.md  shooju.py  sic.py
frmastro/: pyproject.toml
frmastro/frmastro/: const.py  downsample.py  filters.py  linearwcs.py  modelspec.py  synth.py  wcshelper.py
frmastro/frmastro/filter_tracings/: tmp
frmastro/frmastro/psf/: abstractlookup.py  (+14 more)
frmastro/tests/: test_downsample.py  test_smoke.py
frmbase/: pyproject.toml
frmbase/cfg/: cblock  cmd  default_packages.txt  env.src  envinit.py  findimports  gitprompt.bash  prcheck.bsh  respace
frmbase/frmbase/: checkimports.py  dfpipeline.py  dfverify.py  expt.py  fixeddict.py  flogger.py  gapfill.py  meta.py  parmap.py  plateau.py  secrets.py  support.py  textio.py  tstools.py
frmbase/sketches/: astwalk.py  dags.py  envinit.py  eventcontroller.py  importmonitor.py  pipeline.py  task.py  test_branched_pipeline.py  test_foreach_pipeline.py  test_pipeline.py  test_task.py  test_typing.py  trailingwindow.py
frmbase/tests/: example_module.py  test_checkimports.py  test_dfpipeline.py  test_dfverify.py  test_fixeddict.py  test_frmbase.py  test_meta.py  test_parmap.py  test_support.py  test_tstools.py
frmdev/: README.rst  pyproject.toml
frmdev/tests/: test_frmdev.py
frmgis/: pyproject.toml
frmgis/frmgis/: anygeom.py  aoi.py  aoidraw.py  check_overlaps.py  geoloc.py  geolocplot.py  geomcollect.py  get_geom.py  intersects.md  intersects.py  kml.py  kmlwriter.py  mapoverlay.py  plots.py  projection.py  roads.py  union.py
frmgis/tests/: test_anygeom_bokeh.py  test_anygeom_nested_list.py  test_frmgis.py
frmplots/: pyproject.toml
frmplots/frmplots/: calendar.py  cartogram.py  cmap.py  ellipse.py  galaxyplot.py  iplot.py  norm.py  platlabels.py  plots.py  plotstyle.py  plotwheel.py  qdplot.py  qtable.py
frmplots/qtab/: checkablecombo.py  colfilters.py  colselect.py  filterbank.py  ideas.md  main.py  newtable.py  qdtable.py  selector.py  supertable.py  table.py  v2.py
frmplots/tests/: test_frmplots.py  test_platlabel.py
(+1200 files in other folders)
