[tool.poetry]
name = "frmastro"
version = "0.1.1"
description = "Fergal's astro related code in Python"
authors = ["Fergal <fergal.mullally@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
frmbase = "^0.2.0"
ipdb = "^0.13.13"
astropy = "^5.3.2"
matplotlib = "^3.7.2"
numpy = "*"
pandas = "*"
scipy = "*"
pytest = "^7.4.0"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
