[tool.poetry]
name = "frmgis"
version = "0.1.0"
description = ""
authors = ["Fergal <fergal.mullally@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
frmbase = "*"
gdal = "*"
matplotlib = "*" 
requests = "*"

[tool.poetry.dev-dependencies]
frmdev = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
