[tool.poetry]
name = "frmplots"
version = "0.1.0"
description = ""
authors = ["Fergal <fergal.mullally@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
frmbase = "*"
matplotlib = ">2"

[tool.poetry.dev-dependencies]
#pytest = "^5.2"
frmdev = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
